--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,24 +23,14 @@
     <body data-ng-app="wdApp"
           id="wdApp"
           class="wdApp"
-          data-off-canvas-nav
-          data-ng-controller="WDAppController"
-          data-ng-class=" {'layout-boxed': admin.layout === 'boxed' } ">
-         <section data-ng-include=" 'views/header.html' "
-                 id="header"
-                 class="header-container"
-                 data-ng-class=" {'nav-vertical': admin.menu === 'vertical'}">
-         </section>
+          data-ng-controller="WDAppController">
+
 	   
         <div class="main-container">
-			<aside data-ng-include=" 'views/nav.html' "
-							   id="nav-container"
-							   class="nav-container"
-							   data-ng-class=" {'nav-fixed': admin.fixedSidebar, 'nav-vertical': admin.menu === 'vertical', 'nav-horizontal': admin.menu === 'horizontal'}">
-			</aside>			
-            <div id="content" class="content-container">
+						
+   
                 <section data-ng-view data-ng-cloak class="view-container animate-fade-up"></section>
-            </div>			
+          	
         </div>
         <!-- thirdparty libraries-->
 		<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBUqfsa6I7Fhud3-xK24rldx0iKDcueURA&libraries=visualization"></script>		
