--- a/src/main/resources/static/views/pages/signin.html
+++ b/src/main/resources/static/views/pages/signin.html
@@ -1,19 +1,17 @@
 <div class="page-signin">
 
-    <div class="signin-header">
-        <section class="logo text-center">
-            <a href="#/">{{main.brand}}</a>
-        </section>
-    </div>
 
     <div class="signin-body">
         <div class="container">
+
             <div class="form-container" data-ng-controller="LoginController">
                 <form class="form-horizontal">
+                
+                <img class="img-responsive center-block" src="https://www.freelogoservices.com/api/main/ph/zjHl2lgef9cYrQL0JFa7kzbw2vuDpBZNkBjO0Tp9OXdE9g5shnN1i...Bv9ettdV9dsBUGw0pY" />
                     <fieldset>
                         <div class="form-group">
                             <span class="glyphicon glyphicon-envelope"></span>
-                            <input type="email" id="username" ng-model="username" data-focus="true" class="form-control input-lg input-round text-center" placeholder="e-address@qat.com">
+                            <input type="text" id="username" ng-model="username" data-focus="true" class="form-control input-lg input-round text-center" placeholder="e-address@qat.com">
                         </div>
                         <div class="form-group">
                             <span class="glyphicon glyphicon-lock"></span>
@@ -36,3 +34,9 @@
     </div>
 	<div data-ui-footer></div>
 </div>
+ 
+ 
+ 
+ 
+ 
+     </div> 	
