--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,14 +23,23 @@
     <body data-ng-app="wdApp"
           id="wdApp"
           class="wdApp"
-          data-ng-controller="WDAppController">
-
+          data-ng-controller="WDAppController"
+          data-ng-class=" {'layout-boxed': admin.layout === 'boxed' } ">
+         <section data-ng-include=" 'views/header.html' "
+                 id="header"
+                 class="header-container hide"
+                 data-ng-class=" {'nav-vertical': admin.menu === 'vertical'}">
+         </section>
 	   
-        <div class="main-container">
-						
-   
+        <div class="main-container" >
+			<aside data-ng-include=" 'views/nav.html' "
+							   id="nav-container"
+							   class="nav-container hide"
+							   data-ng-class=" {'nav-fixed': admin.fixedSidebar, 'nav-vertical': admin.menu === 'vertical', 'nav-horizontal': admin.menu === 'horizontal'}">
+			</aside>			
+            <div id="content" class="content-container">
                 <section data-ng-view data-ng-cloak class="view-container animate-fade-up"></section>
-          	
+            </div>			
         </div>
         <!-- thirdparty libraries-->
 		<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBUqfsa6I7Fhud3-xK24rldx0iKDcueURA&libraries=visualization"></script>		
@@ -84,6 +93,10 @@
         <script src="scripts/apps/procedures.controllers.js"></script>			
         <script src="scripts/apps/sysmgmt.data.factory.js"></script>	
         <script src="scripts/apps/sysmgmt.data.java.service.js"></script>		
-        <script src="scripts/apps/sysmgmt.data.php.service.js"></script>			
+        <script src="scripts/apps/sysmgmt.data.php.service.js"></script>	
+        
+        <script src="scripts/commons/factory/jogo.factory.js"></script>		
+        <script src="scripts/commons/services/AppService.js"></script>			
+        <script src="scripts/apps/MeusJogosController.js"></script>				
     </body>
 </html>
