--- a/src/main/resources/static/views/nav.html
+++ b/src/main/resources/static/views/nav.html
@@ -8,6 +8,7 @@
         <li>
             <a href="#/ui"><i class="fa fa-magic"></i><span data-translate="ui kit"></span></a>
             <ul>
+            <li><a href="#/ui/BuscaQuadra"><i class="fa fa-caret-right"></i><span data-translate="Busca Quadra"></span></a></li>
                 <li><a href="#/ui/buttons"><i class="fa fa-caret-right"></i><span data-translate="buttons"></span></a></li>
                 <li><a href="#/ui/typography"><i class="fa fa-caret-right"></i><span data-translate="typography"></span></a></li>
                 <li><a href="#/ui/widgets"><i class="fa fa-caret-right"></i><span data-translate="widgets"></span><span class="badge badge-success">13</span></a></li>
