--- a/src/main/resources/static/views/nav.html
+++ b/src/main/resources/static/views/nav.html
@@ -4,11 +4,13 @@
         data-ng-controller="NavController"
 		data-collapse-nav
         data-highlight-active>
-        <li><a href="#/dashboard"> <i class="fa fa-dashboard"></i><span data-translate="dashboard"></span> </a></li>
+        <li><a href="#/dashboard">     <i class="fa fa-dashboard"></i><span data-translate="Meus Jogos"></span> </a></li>
+        <li><a href="#/buscaQuadra">   <i class="fa fa-dashboard"></i>  <span data-translate="Buscar Quadra"></span> </a></li>
+        <li><a href="#/notificacoes">  <i class="fa fa-dashboard"></i> <span data-translate="Notificações"></span><span class="badge badge-success">{{notificacoesCount}}</span> </a></li>
+        <li><a href="#/buscaQuadra3">  <i class="fa fa-dashboard"></i><span data-translate="Escolher Time"></span> </a></li>
         <li>
             <a href="#/ui"><i class="fa fa-magic"></i><span data-translate="ui kit"></span></a>
             <ul>
-            <li><a href="#/ui/BuscaQuadra"><i class="fa fa-caret-right"></i><span data-translate="Busca Quadra"></span></a></li>
                 <li><a href="#/ui/buttons"><i class="fa fa-caret-right"></i><span data-translate="buttons"></span></a></li>
                 <li><a href="#/ui/typography"><i class="fa fa-caret-right"></i><span data-translate="typography"></span></a></li>
                 <li><a href="#/ui/widgets"><i class="fa fa-caret-right"></i><span data-translate="widgets"></span><span class="badge badge-success">13</span></a></li>
