--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -101,6 +101,7 @@
         <script src="scripts/commons/DialogsController.js"></script>
         <script src="scripts/commons/DialogsController2.js"></script>		
         <script src="scripts/apps/MeusJogosController.js"></script>		
-        <script src="scripts/apps/BuscaQuadraController.js"></script>		
+        <script src="scripts/apps/BuscaQuadraController.js"></script>	
+        <script src="scripts/apps/notificacoes.controllers.js"></script>
     </body>
 </html>
