--- a/src/main/resources/static/views/footer.html
+++ b/src/main/resources/static/views/footer.html
@@ -1,3 +1,3 @@
 <div class="footer text-center">
-	&copy; QAT Global 1995-{{cDate}}. All rights reserved. (WebDaptive 6.1.3)
+	&copy; WLCMC-Sistemas 2015-{{cDate}}. Todos os Direitos. (EU-JOGADOR 0.1.0)
 </div>
