--- a/src/main/resources/static/views/header.html
+++ b/src/main/resources/static/views/header.html
@@ -17,9 +17,9 @@
                 <a href="javascript:;" class="dropdown-toggle" uib-dropdown-toggle>
                     <img src="images/taz.jpg" alt="" class="img-circle img30_30">
                     <span class="hidden-xs">
-                        <span data-translate="taz"> - {{::main.backend}}</span>
-						<span ng-show="user.user">({{user.user}})</span>
-                        <span> - {{::main.backend}}</span>							
+                    
+						<span>({{::user.email}})</span>
+                     					
                     </span>
                 </a>
 				
