--- a/src/main/resources/static/views/nav.html
+++ b/src/main/resources/static/views/nav.html
@@ -8,6 +8,7 @@
         <li><a href="#/buscaQuadra">   <i class="fa fa-dashboard"></i>  <span data-translate="Buscar Quadra"></span> </a></li>
         <li><a href="#/notificacoes">  <i class="fa fa-dashboard"></i> <span data-translate="Notificações"></span><span class="badge badge-success">{{notificacoesCount}}</span> </a></li>
         <li><a href="#/buscaQuadra3">  <i class="fa fa-dashboard"></i><span data-translate="Escolher Time"></span> </a></li>
+        <li><a href="#/buscaQuadra3">  <i class="fa fa-dashboard"></i><span data-translate="Convidar Amigo"></span> </a></li>
         <li>
             <a href="#/ui"><i class="fa fa-magic"></i><span data-translate="ui kit"></span></a>
             <ul>
