--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,10 @@
 		<link rel="stylesheet" href="js/thirdparty/angular-toastr/angular-toastr.min.css">	
 		<link rel="stylesheet" href="js/thirdparty/angular-ui-grid/ui-grid.min.css">		
 		<link rel="stylesheet" href="js/thirdparty/angular/angular-csp.css">	
+  		<link rel="stylesheet" href="js/thirdparty/angular-xeditable-0.8.1/css/xeditable.css">
+   		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> 
+  
 	    <link rel="stylesheet" href="css/wd.main.css">
 
     </head>
@@ -68,7 +72,13 @@
         <script src="js/thirdparty/angular-chartjs/Chart.min.js"></script>				
         <script src="js/thirdparty/angular-chartjs/angular-chart.min.js"></script>		
         <script src="js/thirdparty/angular-echarts/echarts-all.js"></script>         
-        <script src="js/thirdparty/angular-echarts/ngecharts.js"></script>    		
+        <script src="js/thirdparty/angular-echarts/ngecharts.js"></script>   
+        
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  		<script src="js/thirdparty/angular-bootstrap/ui-bootstrap-tpls-2.5.0.min.js"></script>
+  		<script src="js/thirdparty/angular-xeditable-0.8.1/js/xeditable.js"></script>
+  		<script src="js/thirdparty/moment/moment.js"></script>	
+   		
         <!--webdaptive -->
         <script src="scripts/wdapp.js"></script>		
         <script src="scripts/commons/wdapp.controllers.js"></script>
@@ -103,5 +113,6 @@
         <script src="scripts/apps/MeusJogosController.js"></script>		
         <script src="scripts/apps/BuscaQuadraController.js"></script>	
         <script src="scripts/apps/notificacoes.controllers.js"></script>
+        <script src="scripts/apps/horarios.controllers.js"></script>
     </body>
 </html>
