--- a/src/main/resources/static/views/ui/buscaQuadra.html
+++ b/src/main/resources/static/views/ui/buscaQuadra.html
@@ -58,6 +58,15 @@
 		</div>
                     </script>
 		<div id="menu"   ng-controller="BuscaQuadraController" >
+		<h3>Panel Tabs</h3>
+                    <div class="divider"></div>
+                    <div class="ui-tab-container">
+                        <uib-tabset class="ui-tab">
+                            <uib-tab heading="Home">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, aspernatur, eum fugit officiis numquam iste aut illo quos pariatur Eligendi, veniam, accusamus. </uib-tab>
+                            <uib-tab heading="Quod ea">Quod ea vel dolores earum veritatis quae sunt tempore odit molestias sit optio quaerat cupiditate iure repudiandae illum doloremque consectetur incidunt!</uib-tab>
+                            <uib-tab heading="Earum sequi">Blanditiis tenetur harum distinctio voluptate asperiores non magnam delectus. Consequatur, deleniti rem magnam possimus necessitatibus iusto suscipit mollitia rerum.</uib-tab>
+                        </uib-tabset>
+                    </div>
 			<div class="panel list-group">
 				<a class="list-group-item" data-toggle="collapse" data-target="#sl1fff" data-parent="#menu"><span class="glyphicon glyphicon-resize-vertical"></span>Filtros <span class="glyphicon glyphicon-list pull-right"></span></a>
 				<div id="sl1fff" class="sublinks collapse in" style="border: 1px solid rgb(221, 221, 221)">
