--- a/src/main/resources/static/views/buscaQuadra.html
+++ b/src/main/resources/static/views/buscaQuadra.html
@@ -58,16 +58,111 @@
 		</div>
                     </script>
 		<div id="menu"   ng-controller="BuscaQuadraController" >
+                   
+                    
 			<div class="panel list-group">
 				<a class="list-group-item" data-toggle="collapse" data-target="#sl1fff" data-parent="#menu"><span class="glyphicon glyphicon-resize-vertical"></span>Filtros <span class="glyphicon glyphicon-list pull-right"></span></a>
+				
+				
+				
+				
+				
+				
 				<div id="sl1fff" class="sublinks collapse in" style="border: 1px solid rgb(221, 221, 221)">
 					<div id="buscarQuadra-container3s" class="creator-container" style="margin-top:1%;margin-left:1%;">
-						<section class="panel panel-default">
-            <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span></strong></div>
-            <div class="panel-body" data-ng-controller="MapDemoController">
-                <map class="ui-map" center="current-location" map-type-id="TERRAIN" zoom="14" scrollwheel="false"> </map>
+						<div class="divider"></div>
+	                    <div class="ui-tab-container">
+	                        <uib-tabset class="ui-tab">
+	                            <uib-tab heading="Lista">
+	                            	<section class="panel panel-box" data-ng-controller="MapDemoController">
+	                            	<div ng-repeat="oEmpresa in empresaList | orderBy:'id'">
+	                            		<div class="row" style="text-align: center;"><h3 style="text-align: center;">{{oEmpresa.nome}}</h3></div>
+	                            		<div class="row" >
+	                            		<div class="col-md-3">
+						                <div class="panel-left panel-item">
+						                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" >
+											  <ol class="carousel-indicators">
+											    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+											    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+											    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+											  </ol>
+											  <div class="carousel-inner">
+											    <div class="carousel-item active">
+											      <img class="d-block w-100" src="/images/gols_LEa_6.ico" alt="First slide">
+											    </div>
+											    <div class="carousel-item">
+											      <img class="d-block w-100" src="/images/dislike.png" alt="Second slide">
+											    </div>
+											    <div class="carousel-item">
+											      <img class="d-block w-100" src="/images/beer.jpg" alt="Third slide">
+											    </div>
+											  </div>
+											  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+											    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+											    <span class="sr-only">Previous</span>
+											  </a>
+											  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+											    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+											    <span class="sr-only">Next</span>
+											  </a>
+											</div>
+						                </div>
+						                </div>
+						                <div class="col-md-9">
+						                <div class="panel-right panel-item bg-reverse">
+						                <div class="col-md-12">
+						                			                    <!-- Pofile panel -->
+            <div class="panel panel-profile">
+   				
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <p class="pull-left">Responsavel : {{oEmpresa.nomeResponsavel}}</p>
+                        <p class="pull-right">Email : {{oEmpresa.email}}</p>
+                    </li>
+  
+                    <li class="list-group-item">
+                        <p class="pull-left">Endereço : {{oEmpresa.endereco.logradouro}}, {{oEmpresa.endereco.numero}}, {{Empresa.endereco.bairro}}</p>
+                    	<p class="pull-right">Telefone : {{oEmpresa.telefone}}</p> 
+                    </li>
+                </ul>
+                </div>
+                
             </div>
-        </section>	
+            <div ng-repeat="oQuadra in oEmpresa.quadras | orderBy:'id'">
+			<div class="col-md-{{12/oEmpresa.quadras.length}}">			                    <!-- Pofile panel -->
+            <div class="panel panel-profile">
+   				
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <p class="pull-left">Quadra : {{oQuadra.nome}}</p>
+                    </li>
+                    <li class="list-group-item">
+                        <p class="pull-left">Tipo : {{oQuadra.tipo}}</p>
+                        <p class="pull-right">Coberta : {{oQuadra.cobertura}}</p>
+                    </li>
+                    <li class="list-group-item">
+                         <p class="pull-left">Valor : R${{oQuadra.valor}}</p>
+                    </li>
+                    <li class="list-group-item">
+                         <p class="pull-left">Valor C/Bola : R${{oQuadra.valor + oQuadra.valorBola}}</p>
+                    </li>
+                </ul>
+                </div>
+             </div>   
+            </div>
+            </div>
+            <!-- end Pofile panel -->
+						                </div>
+						                </div>
+						                </div>
+						            </section>
+	                             </uib-tab>
+	                            <uib-tab heading="Mapa"><div class="panel-body" data-ng-controller="MapDemoController">
+					                <map class="ui-map" center="current-location" map-type-id="TERRAIN" zoom="14" scrollwheel="false"> </map>
+					            </div></uib-tab>
+	                            
+	                        </uib-tabset>
+	                    </div>		
 					</div>
 					<div id="buscarQuadra-container3" class="creator-container" style="margin-top:1%;margin-left:1%;">
 						<label for="Dom" class="btn btn-danger">Dom<input ng-click="orderByMe('SABADO')" type="checkbox" name="gender0" id="defaults" checked="checked" value="DOMINGO" class="badgebox" ng-true-value="'1'" ng-false-value="'2'"><span class="badge">&check;</span></label>
