--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,20 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>WebDaptive - Angular</title>
+        <title>Eu-Jogador</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <!-- Place favicon.ico in the root directory -->
         <!-- Needs images, font...  -->
         <link rel="stylesheet" href="js/thirdparty/font-awesome/css/font-awesome.min.css">
         <!-- end Needs images -->
+        
         <link rel="stylesheet" href="js/thirdparty/bootstrap/css/bootstrap.min.css">	
 		<link rel="stylesheet" href="js/thirdparty/angular-toastr/angular-toastr.min.css">	
 		<link rel="stylesheet" href="js/thirdparty/angular-ui-grid/ui-grid.min.css">		
 		<link rel="stylesheet" href="js/thirdparty/angular/angular-csp.css">	
   		<link rel="stylesheet" href="js/thirdparty/angular-xeditable-0.8.1/css/xeditable.css">
-   		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> 
+   		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> 
   
 	    <link rel="stylesheet" href="css/wd.main.css">
 
@@ -73,6 +74,10 @@
   		<script src="js/thirdparty/angular-bootstrap/ui-bootstrap-tpls-2.5.0.min.js"></script>
   		<script src="js/thirdparty/angular-xeditable-0.8.1/js/xeditable.js"></script>
   		<script src="js/thirdparty/moment/moment.js"></script>	
+  		
+  		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
    		
         <!--webdaptive -->
         <script src="scripts/wdapp.js"></script>		
