--- a/src/main/resources/static/views/buscaQuadra.html
+++ b/src/main/resources/static/views/buscaQuadra.html
@@ -57,6 +57,7 @@
 			<button class="btn btn-warning" type="button" ng-click="cancel()">Cancelar</button>
 		</div>
                     </script>
+           
 		<div id="menu"   ng-controller="BuscaQuadraController" >
                    
                     
@@ -69,6 +70,11 @@
 				
 				
 				<div id="sl1fff" class="sublinks collapse in" style="border: 1px solid rgb(221, 221, 221)">
+					<div class="form-group input-group" >
+						<span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+						<input name="consulta" id="txt_consulta" placeholder="Consultar nome quadra, endereço" type="text" class="form-control">
+					</div>
+					
 					<div id="buscarQuadra-container3s" class="creator-container" style="margin-top:1%;margin-left:1%;">
 						<div class="divider"></div>
 	                    <div class="ui-tab-container">
