--- a/src/main/resources/static/css/wd.main.css
+++ b/src/main/resources/static/css/wd.main.css
@@ -11261,3 +11261,145 @@ body {
 .stock-grid {
   height:42.5vh;
 }
+
+    .gym-show .review-box {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
+        background-color: #fff;
+        margin-bottom: 23px;
+    }
+    
+    .gym-show .rate-review-box {
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        padding: 30px 20px 20px;
+    }
+    
+    .gym-show {
+        background-color: #f1f1f1;
+        font-family: open_sansregular, Arial, sans-serif;
+        position: relative;
+    }
+    
+    .gym-show .rate-review-box .overall-box>span {
+        color: #666;
+        font-size: 40px;
+        margin-bottom: 0;
+    }
+    
+    .gym-show .rate-review-box .overall-box {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+        text-align: center;
+    }
+    
+    .gym-show .rate-review-box .overall-box {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+        text-align: center;
+    }
+    
+    .gym-show .rate-review-box .rating {
+        width: 174px;
+    }
+    
+     .animated {
+    -webkit-transition: height 0.2s;
+    -moz-transition: height 0.2s;
+    transition: height 0.2s;
+}
+
+.stars
+{
+    margin: 20px 0;
+    font-size: 24px;
+    color: #d17581;
+}
+
+.glyphicon-star-empty:before {
+    content: "\e007";
+}
+
+.estrelas input[type=radio] {
+  display: none;
+}
+.estrelas label i.fa:before {
+  content:'\f005';
+  color: #ff1933;
+}
+.estrelas input[type=radio]:checked ~ label i.fa:before {
+  color: #CCC;
+}
+
+
+.gym-show .review-gym .top-reviews-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    padding: 25px 20px 25px;
+    background-color: #fff;
+}
+
+
+.rating_progress.progress-bar {
+	width: 93%;
+    float: left;
+    width: 0%;
+    height: 100%;
+    /* font-size: 12px; */
+    /* line-height: 20px; */
+    /* color: #fff; */
+    /* text-align: center; */
+    background-color: #ff1933;
+    -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
+    box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
+    -webkit-transition: width 0.6s ease;
+    -o-transition: width 0.6s ease;
+    transition: width 0.6s ease;
+}
+
+.fa-star:before {
+    content: "\f005";
+    color: #ff1933;
+}
+
+*:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.gym-show .rate-review-box .overall-box .rating_stars i.icon_on {
+    color: #ff1933;
+}
+
