--- a/src/main/resources/static/views/dashboard2.html
+++ b/src/main/resources/static/views/dashboard2.html
@@ -134,7 +134,7 @@ ul, menu, dir {
                 <i class="glyphicon glyphicon-glyphicon-cloud" data-unicode="2601">☁</i> 
                 <span class="glyphicon-class">Configurações</span></a>
 
-            </li> </li><li class="col-md-1 col-sm-2 col-xs-6 grid-icon"> <a href="#/dashboard">
+            </li> </li><li class="col-md-1 col-sm-2 col-xs-6 grid-icon"> <a href="#/chats">
                 <i class="glyphicon glyphicon-glyphicon-th" data-unicode="e011"></i> 
                 <span class="glyphicon-class">Chat</span></a>
                 
