--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -122,5 +122,6 @@
         <script src="scripts/apps/notificacoes.controllers.js"></script>
         <script src="scripts/apps/horarios.controllers.js"></script>
         <script src="scripts/apps/cadastro.controller.js"></script>
+        <script src="scripts/apps/chat.controller.js"></script>
     </body>
 </html>
